--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.5'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.xerial:sqlite-jdbc:3.47.1.0'
 	implementation 'org.hibernate.orm:hibernate-community-dialects:6.6.3.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
